FBINTF Change Log  version          (1.4-3 Build 15853) Fri, 12 Jul 2024 13:41:21 +0100

1. Time with Time Zone: when a ISQLParam is set to a variant value and the value is
   and array comprising a TDateTime and a Time Zone String. The first element
   may now be NULL. This sets the param value to null.

2. Avoid object is nil error if Firebird Library fails to load.

FBINTF Change Log  version          (1.4-2 Build 15853) Fri, 12 Jul 2024 13:41:21 +0100

1. IBUtils.FormatTimeZoneOffset A zero offset now includes a preceding '+' sign.

2. TFBStatement.DoJournaling now exits immediately if journaling is not active. The
   motivation for this is to avoid calling the Firebird API function 'getInfo'
   unnecesarily. This function can return an error if an incompatible parameter type was
   applied to the statement and hence can confuse resolving the bug. Note: a 
   specific case is in (e.g.) OpenCursorAtStart method when the array of const includes a
   TDateTime. In this case, the param is set to a floating point type rather than
   a Firebird datetime (array of const loses the distinction).

3. TFBAttachment.SetParameters. if an attempt is made to set a parameter with a float
   value, the metadata type is checked to see if the parameter is a Date/Time type. If so then
   the value is assumed to be a TDateTime and the parameter is set using the AsDateTime
   property. Otherwise, the value is assumed to be a floating point type and the AsDouble
   property is used to set the property. This avoids the specific example given above.

4. IBHeader (legacy interface only) Definition of Start_Transaction changed to use
   varargs - win64 compatibility issue.

5. FB25Blob: last parameter of call to isc_blob_lookup_desc is now set to nil. This
   avoids memory corruption with Firebird 4 when using the legacy interface.

6. ISDL interface moved from FB30Array to IB. This is to avoid internal FPC compiler errors
   consequential on the use of generics across units.
