@@ -4,6 +4,7 @@
     <Name Value="fbudrTestbed"/>
     <Type Value="RunTimeOnly"/>
     <AddToProjectUsesSection Value="True"/>
+    <Author Value="MWA Software"/>
     <CompilerOptions>
       <Version Value="11"/>
       <SearchPaths>
@@ -11,6 +12,35 @@
         <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
       </SearchPaths>
     </CompilerOptions>
+    <Description Value="The fbudrtestbed package is  provided to allow client side debugging of UDRs (see User Manual). This provides an emulator for the Firebird udr engine and allows for program logic to the tested using an IDE (Lazarus or Delphi). "/>
+    <License Value=" *  Firebird Interface (fbintf). The fbintf components provide a set of
+ *  Pascal language bindings for the Firebird API. Although predominantly
+ *  a new development they include source code taken from IBX and may be
+ *  considered a derived product. This software thus also includes the copyright
+ *  notice and license conditions from IBX.
+ *
+ *  Except for those parts dervied from IBX, contents of this file are subject
+ *  to the Initial Developer&apos;s Public License Version 1.0 (the &quot;License&quot;); you
+ *  may not use this file except in compliance with the License. You may obtain a
+ *  copy of the License here:
+ *
+ *    http://www.firebirdsql.org/index.php?op=doc&amp;id=idpl
+ *
+ *  Software distributed under the License is distributed on an &quot;AS
+ *  IS&quot; basis, WITHOUT WARRANTY OF ANY KIND, either express or
+ *  implied. See the License for the specific language governing rights
+ *  and limitations under the License.
+ *
+ *  The Initial Developer of the Original Code is Tony Whyman.
+ *
+ *  The Original Code is (C) 2016 Tony Whyman, MWA Software
+ *  (http://www.mwasoftware.co.uk).
+ *
+ *  All Rights Reserved.
+ *
+ *  Contributor(s): ______________________________________.
+ *    "/>
+    <Version Major="1" Minor="4" Release = "3" Build="1233" />
     <Files Count="1">
       <Item1>
         <Filename Value="udr/testbed/FBUdrPlugin.pas"/>
